k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  template:
    metadata:
      name: nginx
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: saveloy/nginx:1.0
          imagePullPolicy: IfNotPresent
          command:
            - /etc/nginx/nginx
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
      restartPolicy: Always
      volumes:
        - name: upload
          persistentVolumeClaim:
            claimName: upload-pvc
        - name: css
          persistentVolumeClaim:
            claimName: css-pvc
  selector:
    matchLabels:
      app: nginx
